--- a/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
+++ b/Models/Speech_Neural_Codec/2024.09.26_FlowMAC.md
@@ -4,17 +4,17 @@
 <summary>基本信息</summary>
 
 - 标题: "FlowMAC: Conditional Flow Matching for Audio Coding at Low Bit Rates"
-- 作者: 
+- 作者:
   - 01 Nicola Pia
   - 02 Martin Strauss
-  - 03 Markus Multrus 
+  - 03 Markus Multrus
   - 04 Bernd Edler
-- 链接: 
+- 链接:
   - [ArXiv](https://arxiv.org/abs/2409.17635)
   - [Publication] Submitted to ICASSP 2025
   - [Github]
   - [Demo]
-- 文件: 
+- 文件:
   - [ArXiv](_PDF/2409.17635v1__FlowMAC__Conditional_Flow_Matching_for_Audio_Coding_at_Low_Bit_Rates.pdf)
   - [Publication] #TODO
 
@@ -25,12 +25,12 @@
 <details>
 <summary>展开原文</summary>
 
-This paper introduces ***FlowMAC***, a novel neural audio codec for high-quality general audio compression at low bit rates based on conditional flow matching (CFM). 
-***FlowMAC*** jointly learns a mel spectrogram encoder, quantizer and decoder. 
-At inference time the decoder integrates a continuous normalizing flow via an ODE solver to generate a high-quality mel spectrogram. 
-This is the first time that a CFM-based approach is applied to general audio coding, enabling a scalable, simple and memory efficient training. 
-Our subjective evaluations show that ***FlowMAC*** at 3 kbps achieves similar quality as state-of-the-art GAN-based and DDPM-based neural audio codecs at double the bit rate. 
-Moreover, ***FlowMAC*** offers a tunable inference pipeline, which permits to trade off complexity and quality. 
+This paper introduces ***FlowMAC***, a novel neural audio codec for high-quality general audio compression at low bit rates based on conditional flow matching (CFM).
+***FlowMAC*** jointly learns a mel spectrogram encoder, quantizer and decoder.
+At inference time the decoder integrates a continuous normalizing flow via an ODE solver to generate a high-quality mel spectrogram.
+This is the first time that a CFM-based approach is applied to general audio coding, enabling a scalable, simple and memory efficient training.
+Our subjective evaluations show that ***FlowMAC*** at 3 kbps achieves similar quality as state-of-the-art GAN-based and DDPM-based neural audio codecs at double the bit rate.
+Moreover, ***FlowMAC*** offers a tunable inference pipeline, which permits to trade off complexity and quality.
 This enables real-time coding on CPU, while maintaining high perceptual quality.
 
 </details>
@@ -52,8 +52,8 @@ This enables real-time coding on CPU, while maintaining high perceptual quality.
 
 In the modern digital world, audio codecs are used on a day-to-day basis, so every technological advancement can have a large impact.
 In recent years, deep neural networks (DNNs) revolutionized the field of audio compression.
-Early approaches~\cite{firstnn_coding,knet_coding,zhen2020efficientscalableneuralresidual} control the compression at via entropy-based losses and ensure good quality via reconstruction losses. 
-With the advent of deep generative models the quality of neural codecs at bit rates lower than 12 kbps greatly improved. 
+Early approaches~\cite{firstnn_coding,knet_coding,zhen2020efficientscalableneuralresidual} control the compression at via entropy-based losses and ensure good quality via reconstruction losses.
+With the advent of deep generative models the quality of neural codecs at bit rates lower than 12 kbps greatly improved.
 
 While for speech coding many different approaches were proven to be successful~\cite{wavenet_coding,lpcnet_coding,ssmgan,cascade_coding}, the general audio codec [SoundStream [8]](2021.07.07_SoundStream.md) established a new paradigm of training a residual [VQ-VAE [9]](../../Modules/VQ/2017.11.02_VQ-VAE.md) via an additional GAN loss end-to-end (e2e).
 For this, a DNN-encoder extracts a learned latent, a residual VQ generates the bit stream, and a DNN-decoder synthesizes the audio.
@@ -75,14 +75,14 @@ VQ-GANs entail a highly involved training pipeline and the existing DDPMs are co
 This demonstrates the need for a solution that is easy to train, while offering high quality performance at acceptable complexity.
 
 Recently, a new paradigm to train continuous normalizing flows (CNFs) called [conditional flow matching (CFM) [19]](../Flow/2022.10.06_Flow_Matching.md) emerged and demonstrated state-of-the-art quality for both image ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) and audio generation ([Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md); [P-Flow [22]](../Flow/P-Flow.md); [VoiceBox [23]](../Speech_LLM/2023.06.23_VoiceBox.md)).
-This approach offers a simple training pipeline at much lower inference and training costs compared to DDPMs. 
+This approach offers a simple training pipeline at much lower inference and training costs compared to DDPMs.
 
 In this work, we present the ***Flow Matching Audio Codec (FlowMAC)***, a new audio compression model for low bit rate coding of general audio at $24$ kHz audio based on CFM.
 Our proposed approach learns a mel spectrogram encoder, residual VQ, and decoder via a combination of a simple reconstruction loss and the CFM objective.
 The CFM-based decoder generates realistic mel spectrograms from the discrete latent, which is then converted to waveform domain via an efficient version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md).
 The model design is simple and the training pipeline is stable and efficient.
 
-Our contributions can be summarized as follows: 
+Our contributions can be summarized as follows:
 - We introduce ***FlowMAC***, a CFM-based mel spectrogram codec offering a simple and efficient training pipeline.
 - Our listening test results demonstrate that ***FlowMAC*** achieves state-of-the-art quality at 3 kbps matching GAN-based and DDPM-based solutions at double the bit rate.
 - We propose an efficient version of ***FlowMAC*** capable of coding at high quality and faster than real time on a CPU.
@@ -102,7 +102,7 @@ To this end, we consider the distribution $q$ of mel spectrograms of the input a
 [Flow Matching [19]](../Flow/2022.10.06_Flow_Matching.md) describes a method to fit a time-dependent probability density path $p_t:[0,1] \times \mathbb{R}^d \rightarrow \mathbb{R}^{\ge 0}$ between a simple sampling distribution $p_0(\mathbf{x})$ and the target data distribution $q(\mathbf{x})$, where $t \in [0,1]$ and $\mathbf{x} \in \mathbb{R}^d$.
 More precisely it defines a framework to train a CNF $\phi_t$ via learning its associated vector field $\mathbf{u}_t$ directly.
 
-Following Section 4.1 in [Flow Matching [19]](../Flow/2022.10.06_Flow_Matching.md) we define 
+Following Section 4.1 in [Flow Matching [19]](../Flow/2022.10.06_Flow_Matching.md) we define
 
 \[
 p_t(\mathbf{x}|\mathbf{x}_1) = \mathcal{N}\left(\mathbf{x}; \mu_t(\mathbf{x}_1), \sigma_t(\mathbf{x}_1)^2\mathbf{I}\right),
@@ -120,7 +120,7 @@ This yields the conditional flow matching objective
 
 \[
 \begin{aligned}
-	\mathcal{L}_{\textup{CFM}}(\theta) 
+	\mathcal{L}_{\textup{CFM}}(\theta)
   &= \mathbb{E}_{t,q(\mathbf{x}_1),p_t(\mathbf{x}|\mathbf{x}_1)} \|\mathbf{v}_t(\mathbf{x};\theta) - \mathbf{u}_t(\mathbf{x}|\mathbf{x}_1)\|^2\\
 	& = \mathbb{E}_{t,q(\mathbf{x}_1),p_0(\mathbf{x}_0)} \|\mathbf{v}_t(\mathbf{x};\theta) - \left(\mathbf{x}_1 - (1 - \sigma_\text{min})\mathbf{x}_0\right)\|^2
 \end{aligned}
@@ -158,11 +158,11 @@ The $128$ mel spectrogram bands are calculated on the input $24$ kHz audio with 
 Mean and standard deviations are calculated offline for the whole dataset and used as fixed normalization factors for the input.
 The normalized mel spectrogram passes through a 1$\times$1 convolutional layer with 128 channels to extract features for the encoder.
 The encoder is a sequence of multi-head attention (MHA), dropout, layer normalization, feed-forward and dropout layers, producing a latent vector to be quantized.
-The network block is repeated $N=6$ times. 
+The network block is repeated $N=6$ times.
 
 The decoder architecture follows the same structure as the encoder.
 Finally, a 1$\times$1 convolutional layer serves as a final projection layer to generate the decoded quantized mel spectrogram.
-The sum of MSE and MAE losses ($\mathcal{L}_{prior}$) serves as reconstruction loss for the input mel spectrogram. 
+The sum of MSE and MAE losses ($\mathcal{L}_{prior}$) serves as reconstruction loss for the input mel spectrogram.
 
 For quantization we use a learned residual VQ based on [VQ-VAE [9]](../../Modules/VQ/2017.11.02_VQ-VAE.md), with projections to small dimensional spaces similar to [DAC [11]](2023.06.11_Descript-Audio-Codec.md).
 ***FlowMAC*** uses a codebook size of 256 and 8 quantizer stages and a downsampling dimension 16 for the 128-dimensional latent.
@@ -192,11 +192,11 @@ MSE 和 MAE 损失的和作为输入的梅尔频谱的重构损失.
 <summary>展开原文</summary>
 
 The CFM architecture follows [Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md) and uses a U-Net with residual 1D convolutional blocks and transformer blocks with snake beta activations ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
-Finally, the output of the U-Net passes through a 1D Block consisting of a 1D convolution, group normalization and a [Mish activation [25]](../../Modules/Activation/Mish.md), after which a 1$\times$1 convolutional layer creates the final output.
+Finally, the output of the U-Net passes through a 1D Block consisting of a 1D convolution, group normalization and a [Mish activation [25]](../../Modules/Activation/2019.08.23_Mish.md), after which a 1$\times$1 convolutional layer creates the final output.
 The corresponding time-step embeddings use a RoPE-Embedding as in [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md).
 
 The CFM decoder is conditioned on the decoded quantized mel spectrogram via concatenation to the input Gaussian noise to estimate the corresponding vector field.
-The optimization criteria $\mathcal{L}_{\text{CFM}}$ is defined in Section 2. 
+The optimization criteria $\mathcal{L}_{\text{CFM}}$ is defined in Section 2.
 
 Overall, the training objective for the whole system is then
 
@@ -204,15 +204,15 @@ Overall, the training objective for the whole system is then
 	\mathcal{L} = \lambda_p \mathcal{L}_{prior} + \lambda_v\mathcal{L}_{q} + \mathcal{L}_{\text{CFM}},
 \]
 
-where $\lambda_p=0.01$ and $\lambda_v=0.25$ denote weighting factors for the prior and VQ-VAE loss ($\mathcal{L}_{q}$). 
+where $\lambda_p=0.01$ and $\lambda_v=0.25$ denote weighting factors for the prior and VQ-VAE loss ($\mathcal{L}_{q}$).
 To improve the CFM training, we sample the timestep $t$ according to a logit normal distribution ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) for each mini-batch.
-In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../Diffusion/Classifier-Free_Guidance.md) technique, where the decoded mel spectrogram condition is set to zero with a probability of $p_g=0.2$, which improves signal quality.
+In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../Diffusion/2022.07.26_Classifier-Free_Guidance.md) technique, where the decoded mel spectrogram condition is set to zero with a probability of $p_g=0.2$, which improves signal quality.
 
 </details>
 <br>
 
 条件流匹配架构遵循 [Matcha-TTS [21]](../Flow/2023.09.06_Matcha-TTS.md), 使用残差 1D 卷积块和 Snake Beta 激活的 Transformer 块 ([BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md)).
-最后, U-Net 的输出经过由一维卷积, 组归一化和 [Mish [25]](../../Modules/Activation/Mish.md) 激活函数组成的一维模块, 然后通过 $1\times 1$ 卷积层生成最终输出.
+最后, U-Net 的输出经过由一维卷积, 组归一化和 [Mish [25]](../../Modules/Activation/2019.08.23_Mish.md) 激活函数组成的一维模块, 然后通过 $1\times 1$ 卷积层生成最终输出.
 对应的时间步嵌入则和 [Grad-TTS [26]](../TTS2_Acoustic/2021.05.13_Grad-TTS.md) 中相同使用旋转嵌入.
 
 条件流匹配解码器以解码后的量化梅尔频谱图作为条件, 与输入的高斯噪声向量通过拼接的方式来估计对应的向量场.
@@ -226,7 +226,7 @@ In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../
 
 其中 $\lambda_p = 0.01$ 和 $\lambda_v = 0.25$ 分别为先验损失和 VQ-VAE 损失的权重因子.
 为了提升条件流匹配的训练, 我们为每个小批量根据对数正态分布 ([StableDiffusion3 [20]](../Diffusion/2024.03.05_StableDiffusion3.md)) 采样时间步 $t$.
-此外, 我们使用 [Classifier-Free Guidance (CFG) [27]](../Diffusion/Classifier-Free_Guidance.md) 技术训练模型, 其中解码后的梅尔频谱图条件以概率为 $p_g=0.2$ 设为零, 这可以提升信号质量.
+此外, 我们使用 [Classifier-Free Guidance (CFG) [27]](../Diffusion/2022.07.26_Classifier-Free_Guidance.md) 技术训练模型, 其中解码后的梅尔频谱图条件以概率为 $p_g=0.2$ 设为零, 这可以提升信号质量.
 
 ### 3.3.Mel-to-Audio Module: 梅尔频谱转音频模块
 
@@ -235,7 +235,7 @@ In addition, we train our model with a [Classifier-Free Guidance (CFG) [27]](../
 
 As mel-to-audio module, we re-train a smaller version of [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) on our data: We adapt the mel spectrogram calculation to fit the setting described in Section 3.1.
 Then, we decrease the decoder initial channels to 1024 and use an additional upsampling layer.
-This yields a smaller architecture than the original BigVGAN. 
+This yields a smaller architecture than the original BigVGAN.
 
 Notice that the dependence of our system on this mel-to-audio module for the final audio synthesis leads to a highest achievable quality dictated by BigVGAN's performance.
 This is saturated by our mel spectrogram codec and our subjective evaluations confirm this phenomenon.
@@ -257,7 +257,7 @@ This is saturated by our mel spectrogram codec and our subjective evaluations co
 
 Thanks to the residual vector quantizer we achieve bit rate scalability via dropping out codebook levels at inference time.
 Moreover, the iterative nature of the Euler method used for inference enables some freedom on the number of function evaluations (NFE) for the CFM decoder.
-***FlowMAC*** works at 1.5 and 3 kbps, uses 32 steps for the ODE solver and factor 1 for the CFG, hence, leading to a total of 64 NFE. 
+***FlowMAC*** works at 1.5 and 3 kbps, uses 32 steps for the ODE solver and factor 1 for the CFG, hence, leading to a total of 64 NFE.
 
 Early experimentation showed that the quality of the mel coder subsystem quickly saturates.
 To test this, we introduce ***FlowMAC-CQ***, a separately trained model at 6 kbps.
@@ -292,7 +292,7 @@ Careful attention needs to be placed on the choice of the CFG factor: values sma
 We train both ***FlowMAC*** and BigVGAN on a combination of the full [LibriTTS [28]](../../Datasets/2019.04.05_LibriTTS.md) clean and dev train subsets as in [BigVGAN [24]](../TTS3_Vocoder/2022.06.09_BigVGAN.md) and an internal music database consisting of $640$ hours of high-quality music of various genres.
 The sampling rate for all data points was $24$ kHz.
 
-BigVGAN was trained following the official implementation [Github [29]](https://github.com/NVIDIA/BigVGAN) for 1M iterations on a single A100 GPU. 
+BigVGAN was trained following the official implementation [Github [29]](https://github.com/NVIDIA/BigVGAN) for 1M iterations on a single A100 GPU.
 ***FlowMAC*** was trained with the Adam optimizer with learning rate $10^{-4}$, a segment length of 2 s and batch size of 128 for 700k iterations on a single RTX3080.
 
 </details>
@@ -303,7 +303,7 @@ BigVGAN was trained following the official implementation [Github [29]](https://
 <details>
 <summary>展开原文</summary>
 
-To evaluate the proposed system, we perform a [P.808 DCR [30]](../../Evaluations/P.808_DCR.md) listening test with naive listeners and a [MUSHRA [31]](../../Evaluations/MUSHRA.md) listening test with expert listeners. 
+To evaluate the proposed system, we perform a [P.808 DCR [30]](../../Evaluations/P.808_DCR.md) listening test with naive listeners and a [MUSHRA [31]](../../Evaluations/MUSHRA.md) listening test with expert listeners.
 To this end, we design a test set of 12 items carefully selected to represent typical challenging signals for audio codecs.
 The test set includes 4 clean and noisy speech samples (male, female, child and speech over music, including fast and emotional speech with varying prosody), 5 music items of various genres (including rock, pop, classical and electronic), and 3 out-of-distribution items (castanets, harpsichord and glockenspiel).
 
