--- a/Models/Speech_LLM/2024.10.06_HALL-E.md
+++ b/Models/Speech_LLM/2024.10.06_HALL-E.md
@@ -23,6 +23,9 @@
 
 ## Abstract: 摘要
 
+<details>
+<summary>展开原文</summary>
+
 Recently, Text-to-speech (TTS) models based on large language models (LLMs) that translate natural language text into sequences of discrete audio tokens have gained great research attention, with advances in neural audio codec (NAC) models using residual vector quantization (RVQ).
 However, long-form speech synthesis remains a significant challenge due to the high frame rate, which increases the length of audio tokens and makes it difficult for autoregressive language models to generate audio tokens for even a minute of speech.
 To address this challenge, this paper introduces two novel post-training approaches: 1) Multi-Resolution Requantization (MReQ) and 2) HALL-E.
@@ -34,6 +37,21 @@ Furthermore, to promote TTS research, we create MinutesSpeech, a new benchmark d
 In experiments, we demonstrated the effectiveness of our approaches by applying our post-training framework to VALL-E.
 We achieved the frame rate down to as low as 8 Hz, enabling the stable minitue-long speech synthesis in a single inference step.
 Audio samples, dataset, codes and pre-trained models are available at [this https URL](https://yutonishimura-v2.github.io/HALL-E_DEMO/).
+
+</details>
+<br>
+
+近期, 随着使用残差向量量化的神经音频编解码器模型的进步, 将自然语言文本转换为离散音频标记序列的基于大语言模型的文本转语音模型引起了广泛的研究关注.
+然而, 长语音合成仍然是一个重要的挑战, 因为高帧率会增加音频标记的长度, 使得自回归语言模型甚至很难为一分钟的语音生成音频标记.
+为了应对这一挑战, 本文引入了两种新颖的后训练方法: 1. 多分辨率重量化 (MReQ) 和 2. HALL-E.
+
+- MReQ 是用于减少预先训练的 NAC 模型帧率的框架. 具体来说, 它采用多分辨率残差向量量化 (MRVQ) 模块, 通过教师-学生蒸馏的方式重新组织离散音频标记.
+- HALL-E 是基于 LLM 的 TTS 模型, 旨在预测 MReQ 的层次化标记. 具体来说, 它采用 MRVQ 子模块, 并从预训练的 LLM-based TTS 模型继续训练.
+
+为了促进 TTS 研究, 我们创建了 MinutesSpeech 新的数据集, 其中包含 40k 小时的过滤语音数据, 用于训练和评估语音合成, 范围从 3s 到 180s.
+在实验中, 我们展示了我们的方法的有效性, 通过将我们的后训练框架应用于 VALL-E.
+我们实现了帧率低至 8 Hz 的稳定分钟长语音合成, 使得单次推断可以实现分钟长度的语音合成.
+音频样本、数据集、代码和预训练模型可在 [此 https URL](https://yutonishimura-v2.github.io/HALL-E_DEMO/) 获得.
 
 ## 1.Introduction: 引言
 
