新增HALL-E相关工作

--- a/Models/Speech_LLM/2024.10.06_HALL-E.md
+++ b/Models/Speech_LLM/2024.10.06_HALL-E.md
@@ -80,6 +80,37 @@ We open-source dataset, codes and pre-trained models along with audio samples at
 
 ## 2.Related Works: 相关工作
 
+### Neural Audio Codec Models
+
+NAC models produce discrete audio tokens by quantizing audio signals.
+SoundStream~\citep{zeghidour2021soundstream} and Encodec~\citep{defossez2022encodec} are pioneering NAC models, which significantly improved compression efficiency over traditional audio codecs.
+Recent studies have proposed NAC models with a focus on maintaining performance in speech processing tasks. Examples include
+SpeechTokenizer~\citep{Zhang2024SpeechTokenizer},
+Descript Audio Code~\citep{kumar2024DAC},
+AcademiCodec~\citep{yang2023hificodec},
+AudioDec~\citep{wu2023audiodec},
+RepCodec~\citep{huang2023repcodec}, and FunCodec~\citep{du2024funcodec}.
+Many studies have focused on reducing bps, while few have explored lowering the frame rate. \cite{defossezmoshi} achieved the lowest frame rate for a NAC model, reaching 12.5Hz by incorporating Transformer models and SpeechTokenizer.
+We report achieving an even lower frame rate of 8Hz, which is about 1.5 times shorter than it.
+
+### Zero-Shot TTS
+
+Zero-Shot TTS aims to synthesize speech from text in the voice of a target speaker using only a short reference audio segment from that speaker.
+Early models relied on speaker embeddings or speaker adaptation~\citep{casanova22yourtts, arik2018neuralvoicecloning, chen2019sample},
+while recent studies have focused on LLM-based models that use NAC models in conjunction with LLMs.
+%~\citep{wang2023valle, zhang2023vallex, song2024ella, xin2024rall, chen2024valle2, meng2024melle}.
+VALL-E~\citep{wang2023valle} was the first LLM-based model, demonstrating impressive capabilities in zero-shot TTS tasks.
+Follow-up studies have explored various extensions such as VALL-E~X for cross-lingual TTS~\citep{zhang2023vallex}, ELLA-V using Montreal forced aligner~\citep{song2024ella},
+RALL-E using prosody features~\citep{xin2024ralle}, VALL-E R using monotonic alignment~\citep{han2024valler}, VALL-E 2 using grouped code modeling~\citep{chen2024valle2}, and MELLE using mel-spectrogram features~\citep{meng2024melle}.
+Prosody information can also be modeled by LLMs
+latent language mode
+Mega-TTS~\citep{jiang2023mega} and Mega-TTS 2~\citep{jiang2024megatts2} introduced prosody LLMs to generate more natural prosody.
+Meanwhile, diffusion-based models ({\it e.g.,} NaturalSpeech2/3~\citep{shen2023naturalspeech2, ju2024naturalspeech3} and Voicebox~\citep{le2024voicebox}) and prompt-based models ({\it e.g.,} Prompt-TTS2~\citep{guo2023prompttts, leng2024prompttts2}) are also known to be effective to generate high-quality controllable speech.
+Beyond speech synthesis, several studies proposed audio generation models such as
+UniAudio~\citep{yang2023uniaudio},
+Audiobox~\citep{vyas2023audiobox}.
+In contrast, this work explores post-training methods to reduce the frame rate of LLM-based models, aiming at minute-long speech synthesis given a pre-trained NAC model such as Encodec.
+
 ## 3.Methodology: 方法
 
 ## 4.Experiments: 实验
