新增HALL-E预备知识

--- a/Models/Speech_LLM/2024.10.06_HALL-E.md
+++ b/Models/Speech_LLM/2024.10.06_HALL-E.md
@@ -111,6 +111,51 @@ UniAudio~\citep{yang2023uniaudio},
 Audiobox~\citep{vyas2023audiobox}.
 In contrast, this work explores post-training methods to reduce the frame rate of LLM-based models, aiming at minute-long speech synthesis given a pre-trained NAC model such as Encodec.
 
+### Preliminaries
+
+#### Neural Audio Codec
+
+A NAC model typically consists of three components: an encoder $\mathrm{Enc}(\cdot)$, a vector quantizer $\mathrm{VQ}(\cdot)$, and a decoder $\mathrm{Dec}(\cdot)$.
+The quantizer is the core component that produces discrete audio tokens.
+This work assumes that an RVQ module~\citep{zeghidour2021soundstream} is used as the quantizer, which is defined as follows:
+
+$$
+\bm{z}_{l} = \mathrm{VQ}_{l} (\bm{x}_{l - 1}),\quad \bm{x}_{l+1} = \bm{x}_{l} - \tilde{\bm{z}}_{l},\quad \bm{h} = \sum_{l=1}^{L} \tilde{\bm{z}}_{l},
+$$
+
+where $\bm{x}_{0} = \mathrm{Enc}(\bm{x}_{\mathrm{in}}) \in \mathbb{R}^{d \times n}$ is the encoder output for the input audio $\bm{x}_{\mathrm{in}}$,
+$d$ is the latent dimension,
+$n$ is the sequence length,
+$\mathrm{VQ}_{l}$ is a vector quantizer,
+$\bm{z}_{l} \in \mathbb{N}^{n}$ is a discrete token sequence,
+$\tilde{\bm{z}}_{l} = \mathrm{Emb}_{l}(\bm{z}_{l}) \in \mathbb{R}^{d \times n}$ is a sequence of embeddings corresponding to $\bm{z}_{l}$ obtained through a learnable embedding layer $\mathrm{Emb}_{l}(\cdot)$\footnote{In this paper, the tilde symbol (~$\tilde{}$~) denotes the embeddings corresponding to a token sequence.},
+$l \in \{1, 2, \cdots, L\}$ is the layer index, and $L$ is the number of layers. The output $\bm{h} \in \mathbb{R}^{d \times n}$ is then fed into the decoder to reconstruct the input audio as $\bm{y} = \mathrm{Dec}(\bm{h})$.
+
+#### LLM-based TTS.
+
+An LLM-based TTS typically consists of two decoder-only language models: an autoregressive (AR) model $T_{\mathrm{ar}}$ and a non-autoregressive (NAR) model $T_{\mathrm{nar}}$ \citep{wang2023valle}.
+The speech synthesis procedure is given by the following equations:
+
+$$
+\hat{\bm{z}}_{1} = T_{\mathrm{ar}}(\bm{t}, \bm{z}_{1}^{prompt}),\quad \hat{\bm{z}}_{l+1} = T_{\mathrm{nar}} (\bm{t}, \bm{h}^{prompt}_{L}, \hat{\bm{h}}_{l}, l),\\
+\hat{\bm{h}}_{l} = \sum_{l^{\prime}=1}^{l} \hat{\tilde{\bm{z}}}_{l^{\prime}},\quad \hat{\bm{y}} = \mathrm{Dec} ([\bm{h}^{prompt}_{L}, \hat{\bm{h}}_{L}]),
+$$
+
+where $[\bm{h}^{prompt}_{L}, \hat{\bm{h}}_{L}]$ denotes the concatenation of these two matrices along the time axis.
+In Eq.~(\ref{eq:valle1}), $T_{\mathrm{ar}}$ generates an audio token sequence $\hat{\bm{z}}_{1} \in \mathbb{N}^{n^{\prime}}$ corresponding to the first layer of RVQ given two inputs: a text prompt $\bm{t}$ and {an audio prompt} $\bm{z}^{prompt}_{1} = \mathrm{VQ}_{1} (\mathrm{Enc}(\bm{x}_{prompt}))$ {extracted from an audio input} $\bm{x}_{prompt}$.
+In Eq.~(\ref{eq:valle2}), $T_{\mathrm{nar}}$ iteratively generates token sequences $\hat{\bm{z}}_{l+1} \in \mathbb{N}^{n^{\prime}}$ from the accumulated hidden features $\hat{\bm{h}}_{l}$ in Eq.~(\ref{eq:valle3}) and the audio prompt's hidden features $\bm{h}^{prompt}_{L}$.
+Finally, in Eq.~(\ref{eq:valle4}), speech $\hat{\bm{y}}$ is generated.
+Note that $\mathrm{Enc}, \mathrm{VQ}_{1}$, and $\mathrm{Dec}$ are from a frozen NAC model.
+
+#### Preliminary Experiments
+
+LLM-based TTS models have a predefined context window size and are typically trained with speech data ranging from several seconds to several tens of seconds. To generate long speech segments, a straightforward approach is to reduce the frame rate in the NAC model.
+However, reducing the frame rate below 48 Hz significantly
+decreases speech reconstruction performance as shown in
+Figure~\ref{fig:preliminary}, where we evaluated the performance of Encodec~\citep{defossez2022encodec} in terms of the Perceptual Evaluation of Speech Quality (PESQ) scores and word error rates (WERs) as functions of frame rates.
+Specifically, it is confirmed that training becomes entirely difficult at 8Hz.
+Therefore, in this study, we propose a NAC model that works even at an 8Hz, demonstrating a significant improvement over existing limitations.
+
 ## 3.Methodology: 方法
 
 ## 4.Experiments: 实验
