--- a/Models/Speech_LLM/2024.10.06_HALL-E.md
+++ b/Models/Speech_LLM/2024.10.06_HALL-E.md
@@ -163,3 +163,15 @@ Therefore, in this study, we propose a NAC model that works even at an 8Hz, demo
 ## 5.Results: 结果
 
 ## 6.Conclusions: 结论
+
+We introduced two novel approaches for minute-long zero-shot text-to-speech synthesis: MReQ and HALL-E.
+MReQ reduced the frame rate of the Encodec model to 8 Hz by reorganizing audio tokens via MRVQ.
+HALL-E efficiently synthesized minute-long speech by using 8Hz tokens in the AR model and MRVQ sub-modules in the NAR model.
+We demonstrated the effectiveness of these approaches on MinutesSpeech, the newly introduced dataset consisting of 40,000 hours of speech data.
+Our work contributed to promote zero-shot TTS research.
+
+### Limitations and Future Work
+
+By reducing the frame rate to 8 Hz, our AR model can utilize longer contexts, enhancing the naturalness of the synthesized speech. We believe that to handle extended context is particularly advantageous for larger AR models such as AudioLM~\citep{borsos2023audiolm}, SpeechGPT~\citep{zhang2023speechgpt}, and PSLM~\citep{mitsui2024pslm}. Demonstrating the effectiveness of our approach not only in TTS but also with these models remains a future work.
+Furthermore, as shown in Table~\ref{tab:dataset}, we have achieved shorter audio token length than  the corresponding text token length. However, in our current AR model, we concatenate these tokens, which results in the text tokens becoming a bottleneck in terms of sequence length. Small-E~\citep{lemerle2024small} propose methods to mitigate this issue by processing each token individually and fusing them using cross-attention. Exploring such architectural enhancements is an important direction for future work.
+Lastly, as shown in Table~\ref{tab:nacmodels}, our method brought significant improvements with SpeechTokenizer, even more so than when applied to Encodec. It means that our approach can further enhance the objective of preserving linguistic information. This indicates that our method could serve as a replacement for traditional SSL models~\citep{hsu2021hubert, chen2022wavlm} or ASR encoders~\citep{lakhotia2021generative, chu2023qwen}, marking an important direction for future research.
