--- a/Models/Speech_LLM/2024.09.17_Moshi.md
+++ b/Models/Speech_LLM/2024.09.17_Moshi.md
@@ -4,22 +4,22 @@
 <summary>基本信息</summary>
 
 - 标题: "Moshi: A Speech-Text Foundation Model for Real-Time Dialogue"
-- 作者: 
-  - 01 Alexandre Defossez, 
-  - 02 Laurent Mazare, 
-  - 03 Manu Orsini, 
-  - 04 Amelie Royer, 
-  - 05 Patrick Perez, 
-  - 06 Herve Jegou, 
-  - 07 Edouard Grave, 
+- 作者:
+  - 01 Alexandre Defossez,
+  - 02 Laurent Mazare,
+  - 03 Manu Orsini,
+  - 04 Amelie Royer,
+  - 05 Patrick Perez,
+  - 06 Herve Jegou,
+  - 07 Edouard Grave,
   - 08 Neil Zeghidour
-- 链接: 
+- 链接:
   - [ArXiv](https://arxiv.org/abs/2410.00037)
-  - [Publication]()
+  - [Publication]
   - [Github](https://github.com/kyutai-labs/moshi)
-  - [Demo]()
-- 文件: 
-  - [ArXiv] #TODO
+  - [Demo]
+- 文件:
+  - [ArXiv](_PDF/2410.00037v2__Moshi__A_Speech-Text_Foundation_Model_for_Real-Time_Dialogue.pdf)
   - [Publication] #TODO
 
 </details>
@@ -29,17 +29,17 @@
 <details>
 <summary>展开原文</summary>
 
-We introduce ***Moshi***, a speech-text foundation model and full-duplex spoken dialogue framework. 
-Current systems for spoken dialogue rely on pipelines of independent components, namely voice activity detection, speech recognition, textual dialogue and text-to-speech. 
-Such frameworks cannot emulate the experience of real conversations. 
-First, their complexity induces a latency of several seconds between interactions. 
-Second, text being the intermediate modality for dialogue, non-linguistic information that modifies meaning -- such as emotion or non-speech sounds -- is lost in the interaction. 
-Finally, they rely on a segmentation into speaker turns, which does not take into account overlapping speech, interruptions and interjections. 
-***Moshi*** solves these independent issues altogether by casting spoken dialogue as speech-to-speech generation. 
-Starting from a text language model backbone, ***Moshi*** generates speech as tokens from the residual quantizer of a neural audio codec, while modeling separately its own speech and that of the user into parallel streams. 
-This allows for the removal of explicit speaker turns, and the modeling of arbitrary conversational dynamics. 
-We moreover extend the hierarchical semantic-to-acoustic token generation of previous work to first predict time-aligned text tokens as a prefix to audio tokens. 
-Not only this `Inner Monologue` method significantly improves the linguistic quality of generated speech, but we also illustrate how it can provide streaming speech recognition and text-to-speech. 
+We introduce ***Moshi***, a speech-text foundation model and full-duplex spoken dialogue framework.
+Current systems for spoken dialogue rely on pipelines of independent components, namely voice activity detection, speech recognition, textual dialogue and text-to-speech.
+Such frameworks cannot emulate the experience of real conversations.
+First, their complexity induces a latency of several seconds between interactions.
+Second, text being the intermediate modality for dialogue, non-linguistic information that modifies meaning -- such as emotion or non-speech sounds -- is lost in the interaction.
+Finally, they rely on a segmentation into speaker turns, which does not take into account overlapping speech, interruptions and interjections.
+***Moshi*** solves these independent issues altogether by casting spoken dialogue as speech-to-speech generation.
+Starting from a text language model backbone, ***Moshi*** generates speech as tokens from the residual quantizer of a neural audio codec, while modeling separately its own speech and that of the user into parallel streams.
+This allows for the removal of explicit speaker turns, and the modeling of arbitrary conversational dynamics.
+We moreover extend the hierarchical semantic-to-acoustic token generation of previous work to first predict time-aligned text tokens as a prefix to audio tokens.
+Not only this `Inner Monologue` method significantly improves the linguistic quality of generated speech, but we also illustrate how it can provide streaming speech recognition and text-to-speech.
 Our resulting model is the first real-time full-duplex spoken large language model, with a theoretical latency of 160ms, 200ms in practice, and is available at [this https URL](https://github.com/kyutai-labs/moshi).
 
 </details>
@@ -49,7 +49,7 @@ Our resulting model is the first real-time full-duplex spoken large language mod
 当前的口语对话系统依赖于一系列独立的组件, 即语音活动检测, 语音识别, 文本对话, 文本转语音.
 这样的框架无法模拟真实对话的体验.
 
-首先, 其复杂性导致交互之间存在数秒钟的延迟. 
+首先, 其复杂性导致交互之间存在数秒钟的延迟.
 其次, 由于文本是对话的中间媒介, 修改对话含义的非语言信息 (如情感或非语音声音) 将在交互中丢失.
 最后, 它们依赖于将对话分割为说话者轮次, 这没有考虑到重叠语音, 打断和插话.
 
