--- a/Models/Speech_LLM/2024.10.06_HALL-E.md
+++ b/Models/Speech_LLM/2024.10.06_HALL-E.md
@@ -158,6 +158,117 @@ Therefore, in this study, we propose a NAC model that works even at an 8Hz, demo
 
 ## 3.Methodology: 方法
 
+### 3.1.MReQ: Multi-Resolution Requantization
+
+This section introduces MReQ, a post-training framework for hierarchically reorganizing a pre-trained RVQ module to reduce the frame rate.
+Specifically, MReQ incorporates a multi-resolution residual vector quantization (MRVQ) module to a pre-trained NAC model as shown in Figure~\hyperref[fig:mreq]{\ref*{fig:mreq}}, and continues training the NAC model in a teacher-student distillation manner.
+For a pre-trained 48Hz Encodec model, MReQ reduces the frame rate at the first quantization layer to 8 Hz. This enables LLM-based TTS models to handle longer contexts.
+
+#### Architecture
+
+The MRVQ module is a nested structure of RVQ.
+Specifically, it consists of a residual structure composed of multiple low frame-rate residual vector quantization (LRVQ) blocks, each of which is itself a residual structure operating at a different frame rate.
+The definition is given as follows.
+
+**Definition 1 (MRVQ module).**
+Let $\bm{x}_{0} \in \mathbb{R}^{d \times n_{0}}$ be an encoder output, where $d$ is the latent dimension and $n_{0} = T s_{0}$ is the sequence length depending on the time length $T$ (sec) and the frame rate $s_{0}$ (Hz).
+The MRVQ module is defined as follows:
+
+$$
+\begin{aligned}
+  \bm{c}_{k} = \mathrm{LRVQ}^{(k)}_{\aalpha\mathchar`-\bbeta\mathchar`-\ggamma} (\bm{x}_{k - 1}),\\
+  \bm{x}_{k+1} = \bm{x}_{k} - \tilde{\bm{c}}_{k},\\
+  \bm{h} = \sum_{k=1}^{K} \tilde{\bm{c}}_{k},
+\end{aligned}
+$$
+
+where $\mathrm{LRVQ}^{(k)}_{\aalpha\mathchar`-\bbeta\mathchar`-\ggamma}$ is an LRVQ block, $K$ is the number of blocks, $\aalpha\mathchar`-\bbeta\mathchar`-\ggamma$ is a triplet of hyperparameters to determine the block structure.
+
+**Definition 2 (LRVQ block).**
+
+Each LRVQ block $\mathrm{LRVQ}^{(k)}_{\aalpha\mathchar`-\bbeta\mathchar`-\ggamma}$ consists of five components:
+a pre-quantizer $\mathrm{PreQ}^{(k)}_{\aalpha}$,
+a sub-encoder $E_{k}$ for down sampling,
+a main quantizer $\mathrm{Quant}^{(k)}_{\bbeta}$,
+a sub-decoder $D_{k}$ for upsampling, and a post-quantizer $\mathrm{PostQ}^{(k)}_{\ggamma}$.
+
+The quantization procedure is given by
+
+$$
+\begin{aligned}
+  \bm{a}_{k} = \mathrm{PreQ}^{(k)}_{\aalpha} (\bm{x}_{k-1}),\\
+  \bm{b}_{k} = \mathrm{Quant}^{(k)}_{\bbeta}(E_{k} ( \tilde{\bm{a}}_{k} )),
+  \bm{c}_{k} = \mathrm{PostQ}^{(k)}_{\ggamma} (D_{k} (\tilde{\bm{b}}_{k})),
+\end{aligned}
+$$
+
+where $\bm{a}_{k}, \bm{b}_{k}, \bm{c}_{k}$ are token sequences.
+The three quantizers $\mathrm{PreQ}^{(k)}_{\aalpha}, \mathrm{Quant}^{(k)}_{\bbeta}$ and $\mathrm{PostQ}^{(k)}_{\ggamma}$ are implemented using RVQ with $\aalpha$, $\bbeta$, and $\ggamma$ layers, respectively.
+Note that $\bm{b}_{k} \in \mathbb{N}^{\bbeta \times n_{k}}$ is the token sequence representing audio in a low frame rate. Its length is given by $n_{k} = T s_{k}$, where $s_{k}$ is the frame rate satisfying $s_{1} < s_{2} < \cdots < s_{K}$ and $s_{K} = s_{0}$.
+The other two sequences $\bm{a}_{k}$ and $\bm{c}_{k}$ are used only for facilitating training of NAR  models used in LLM-based TTS models.
+
+**Implementation details.**
+
+Figure~\hyperref[fig:mreq]{\ref*{fig:mreq}a} shows the MRVQ module applied to the Encodec model, where the frame rate is reduced from $s_{0} = 48$ Hz to $s_{1} = 8$ Hz using $4$ LRVQ blocks.
+Figure~\hyperref[fig:mreq]{\ref*{fig:mreq}b} shows the LRVQ block.
+Each sub-encoder $E_{k}$ consists of a convolution layer followed by two bi-LSTM layers, which reduces the frame rate from $s_{0}$ to $s_{k}$.
+Each sub-decoder $D_{k}$ consists of two bi-LSTM layers followed by a transposed convolution layer, which is symmetric to $E_{k}$.
+Table~\ref{tab:mrvq_arc} lists frame rates $s_{k}$, hyperparameter triplets $\aalpha\mathchar`-\bbeta\mathchar`-\ggamma$, and strides for the convolution and transposed convolution layers.
+For $k=4$, only the pre-quantize is used,  and the other components are replaced with identical functions, reducing Eqs.~(\ref{eq:lrvq2}, \ref{eq:lrvq3}) to $\bm{b}_{4} = \bm{a}_{4}$ and $\bm{c}_{4} = \bm{b}_{4}$, respectively.
+
+#### Post-Training with Teacher-Student Distillation
+
+Training NAC models with the MRVQ module is challenging because quantization layers with lower frame rates are prone to be ignored.
+To address this, we introduce a post-training technique based on teacher-student distillation, where a NAC model pre-trained with a high frame rate serves as the teacher model.
+As shown in Figure~\hyperref[fig:mreq]{\ref*{fig:mreq}a}, teacher embeddings ({in green}) are extracted from the frozen RVQ module, while student embeddings ({in purple}) are extracted from the MRVQ module.
+We then minimize the feature-level distillation (FLD) loss and the hidden-state reconstruction (HSR) loss.
+
+**FLD loss.**
+The FLD loss is a mean absolute error (MAE) loss between teacher and student embeddings, defined as follows:
+
+$$
+\begin{aligned}
+  L_{\mathrm{FLD}} = \sum_{({s}, {t}) \in \mathcal{P}}\lambda^{\mathrm{FLD}}_{({s}, {t})}\|{\hat{\bm{h}}_{s}} - {\bm{h}_{t}}\|_{1},\\
+  \hat{\bm{h}}_{s} = \sum_{k=1}^{{s}} \tilde{\bm{c}}_{k},\\
+  \bm{h}_{t} = \sum_{l=1}^{{t}} \tilde{\bm{z}}_{l},
+\end{aligned}
+$$
+
+where
+${\bm{h}_{s}}$ is a student embedding,
+${\bm{h}_{t}}$ is a teacher embedding,
+$\mathcal{P}$ is a set of student-teacher index pairs,
+and $\lambda^{\mathrm{FLD}}_{({s}, {t})}$ is a weight {coefficient}.
+We use $\mathcal{P} = \{({1}, {1}), ({2}, {3}), ({3}, {5}), ({4}, {8})\}$ for RVQ with eight layers and MRVQ with four LRVQ blocks.
+Note that $\tilde{\bm{c}}_{k}$ and $\tilde{\bm{z}}_{l}$ are obtained from Eqs.~(\ref{eq:mrvq1}) and Eqs.~(\ref{eq:rvq1}), respectively.
+The student-teacher pairs in $\mathcal{P}$ are determined so that the cumulative number of student's post-quantization layers matches that of the teacher's quantization layers.
+
+**HSR loss.**
+
+The HSR loss is introduced to further facilitate training of each LRVQ block:
+
+$$
+L_{\mathrm{HSR}} =
+\sum_{k=1}^{K}
+\lambda^{\mathrm{HSR}}_{k}
+\|
+\tilde{\bm{a}}_{k} -
+D_{k} (\tilde{\bm{b}}_{k})
+\|_{1}
+$$
+
+where $\tilde{\bm{a}}_{k}, \tilde{\bm{b}}_{k}$ are from Eqs.~(\ref{eq:lrvq1}, \ref{eq:lrvq2}), and $\lambda^{\mathrm{HSR}}_{k}$ is a weight {coefficient}.
+
+**Total loss.**
+The total loss is given by
+$L_{\mathrm{total}} = L_{\mathrm{NAC}} + L_{\mathrm{FLD}} + L_{\mathrm{HSR}}$, where $L_{\mathrm{NAC}}$ is the loss used to train the NAC model.
+We continue to train the encoder and decoder with the MRVQ module using a copied weight from the NAC model, which is used as a teacher model.
+Compared to training from scratch, this allows for more efficient and stable convergence.
+
+**Discussion.**
+Our post-training approach is designed to be independent of the encoder-decoder architecture of the original NAC model, as we only assumed the use of RVQ.
+Consequently, by utilizing state-of-the-art NAC models such as SpeechTokenizer~\citep{Zhang2024SpeechTokenizer} instead of Encodec~\citep{defossez2022encodec}, it is possible to achieve higher performance at a lower frame rate.
+
 ## 4.Experiments: 实验
 
 ## 5.Results: 结果
